# miniC

./: CMakeLists.txt  README.md
miniCapp/: CMakeLists.txt  main.c
miniClib/: CMakeLists.txt  square.c  square.h
miniCtest/: CMakeLists.txt  square_test.cpp
